--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nameofapp</title>
+    <title>MorisArt</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+
+  	<nav>
+	  <ul>
+	    <li>Home</li>
+	    <li>About</li>
+	    <li>Contact</li>
+	  </ul>
+	</nav>
+
     <%= yield %>
+
+    <footer>
+	  &copy; 2015 MorisArt Melbourne
+	</footer>
+
   </body>
 </html>
