--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,3 @@
-<h1>You are the Art! MorisArt!</h1>
+<h1>You are the Art - - MorisArt</h1>
 <p>We creat unique pictures based on genuine beauty of human faces.</p>
 <p>Buy original paintings, drawings and limited edition prints direct from artists’ studios using our beautifully designed app.</p>
