--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome to MorisArt!</h1>
-<h2>The most authentic art in Melbourne.</h2>
+<h1>MorisArt - - The genuine Art</h1>
+
+<%= image_tag("picture1.jpg", size:"700x500", class:"img-responsive work-img") %>
+
+<%= image_tag("picture2.jpg", size:"700x500", class:"img-responsive work-img") %>
+
