--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,75 @@
-// Place all the styles related to the static_pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	background-color: rgba(255, 199, 199, 1);
+}
+
+h1 {
+	font-family: monospace, sans-serif;
+	color: rgba(143, 150, 255, 1);
+	text-align: center;
+	font-size: 3em;
+	padding: 40px;
+}
+
+#menuMoris.navbar-default .navbar-brand {
+    color: rgba(143, 150, 255, 1);
+    font-size: 20px;
+    font-weight: 700;
+	letter-spacing: 0.05em;
+	font-family: monospace, sans-serif;
+}
+#menuMoris.navbar-default {
+    font-size: 18px;
+    background-color: rgba(143, 14, 81, 1);
+    border-bottom-width: 0px;
+}
+#menuMoris.navbar-default .navbar-nav>li>a {
+    color: rgba(255, 199, 199, 1);
+    background-color: rgba(143, 14, 81, 1);
+}
+#menuMoris.navbar-default .navbar-nav>li>a:hover,
+#menuMoris.navbar-default .navbar-nav>li>a:focus {
+    color: rgba(0, 0, 0, 1);
+    background-color: rgba(255, 199, 199, 1);
+}
+#menuMoris.navbar-default .navbar-nav>.active>a,
+#menuMoris.navbar-default .navbar-nav>.active>a:hover,
+#menuMoris.navbar-default .navbar-nav>.active>a:focus {
+    color: rgba(85, 85, 85, 1);
+    background-color: rgba(255, 199, 199, 1);
+}
+#menuMoris.navbar-default .navbar-toggle {
+    border-color: #ffc7c7;
+}
+#menuMoris.navbar-default .navbar-toggle:hover,
+#menuMoris.navbar-default .navbar-toggle:focus {
+    background-color: #ffc7c7;
+}
+#menuMoris.navbar-default .navbar-toggle .icon-bar {
+    background-color: #ffc7c7;
+}
+#menuMoris.navbar-default .navbar-toggle:hover .icon-bar,
+#menuMoris.navbar-default .navbar-toggle:focus .icon-bar {
+    background-color: #8f0e51;
+}
+
+.work-img {
+	border-radius: 40px;
+	border: 30px solid rgba(143, 14, 81, 1);
+	display: inline-block;
+	margin-left: 40px;
+}
+
+.footer {
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    color: rgba(143, 150, 255, 1);
+}
+
+p{
+	font-size: 20px;
+
+}
