--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,26 +2,46 @@
 <html>
   <head>
     <title>MorisArt</title>
-    <%= csrf_meta_tags %>
-
+    
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= csrf_meta_tags %>
   </head>
 
   <body>
 
-  	<nav>
-	  <ul>
-	    <li>Home</li>
-	    <li>About</li>
-	    <li>Contact</li>
-	  </ul>
-	</nav>
+  <div id="menuMoris" class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header"><a class="navbar-brand" href="#">MorisArt</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse navbar-menubuilder">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/">Home</a>
+          </li>
+          <li><a href="/products">Products</a>
+          </li>
+          <li><a href="/about-us">About Us</a>
+          </li>
+          <li><a href="/contact">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-    <%= yield %>
+  <%= yield %>
 
-    <footer>
-	  &copy; 2015 MorisArt Melbourne
+  <footer class="footer">
+    <div class="container">
+      &copy; 2017 MorisArt Melbourne
+    </div>
 	</footer>
 
   </body>
