--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>MorisArt - - The genuine Art</h1>
+<h1>MorisArt - The genuine Art</h1>
 
 <%= image_tag("picture1.jpg", size:"700x500", class:"img-responsive work-img") %>
 
