--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,18 +1,18 @@
 
 body {
-	background-color: rgba(255, 199, 199, 1);
+	background-color: rgb(0,0,0);
 }
 
 h1 {
 	font-family: monospace, sans-serif;
-	color: rgba(143, 150, 255, 1);
+	color: rgb(255,255,255);
 	text-align: center;
 	font-size: 3em;
 	padding: 40px;
 }
 
 #menuMoris.navbar-default .navbar-brand {
-    color: rgba(143, 150, 255, 1);
+    color: rgb(255,255,255);
     font-size: 20px;
     font-weight: 700;
 	letter-spacing: 0.05em;
@@ -24,13 +24,13 @@ h1 {
     border-bottom-width: 0px;
 }
 #menuMoris.navbar-default .navbar-nav>li>a {
-    color: rgba(255, 199, 199, 1);
+    color: rgb(255,255,255);
     background-color: rgba(143, 14, 81, 1);
 }
 #menuMoris.navbar-default .navbar-nav>li>a:hover,
 #menuMoris.navbar-default .navbar-nav>li>a:focus {
-    color: rgba(0, 0, 0, 1);
-    background-color: rgba(255, 199, 199, 1);
+    color: rgb(255,255,255);
+    background-color: rgb(0,0,0);
 }
 #menuMoris.navbar-default .navbar-nav>.active>a,
 #menuMoris.navbar-default .navbar-nav>.active>a:hover,
@@ -55,7 +55,7 @@ h1 {
 
 .work-img {
 	border-radius: 40px;
-	border: 30px solid rgba(143, 14, 81, 1);
+	border: 15px solid rgba(143, 14, 81, 1);
 	display: inline-block;
 	margin-left: 40px;
 }
@@ -66,10 +66,11 @@ h1 {
     width: 100%;
     height: 60px;
     text-align: center;
-    color: rgba(143, 150, 255, 1);
+    color: rgb(255,255,255);
 }
 
 p{
 	font-size: 20px;
+	color: rgb(255,255,255);
 
 }
