--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,11 +1,11 @@
 
 body {
-	background-color: rgb(0,0,0);
+	background-color: rgb(255, 255, 255);
 }
 
 h1 {
 	font-family: monospace, sans-serif;
-	color: rgb(255,255,255);
+	color: rgb(0, 0, 0);
 	text-align: center;
 	font-size: 3em;
 	padding: 40px;
@@ -20,7 +20,7 @@ h1 {
 }
 
 #menuMoris.navbar-default {
-    font-size: 18px;
+    font-size: 20px;
     background-color: rgba(143, 14, 81, 1);
     border-bottom-width: 0px;
 }
@@ -70,10 +70,10 @@ h1 {
 
 .footer {
     text-align: center;
-    color: rgb(255,255,255);
+    color: rgb(0, 0, 0);
 }
 
 p {
 	font-size: 20px;
-	color: rgb(255,255,255);
+	color: rgb(0, 0, 0);
 }
