--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,32 +2,31 @@
 
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <br>
-      <th>Description</th>
-      <br>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container-fluid">
+  <div class="row">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-xs-6 col-md-4">
+        <h2><%= product.name %></h2>
+        <%= image_tag(product.image_url, class:"product-img img-responsive")%>
+        <p>
+        <%= product.description %> /
+        <%= product.colour %>
+        <strong>$ <%= product.price %></strong>
+        </p>
+        <p>
+        <%= link_to 'Show', product %>
+        <%= link_to 'Edit', edit_product_path(product) %>
+        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </p>
+      </div><!--/col-->
     <% end %>
-  </tbody>
-</table>
+  </div><!--/row-->
+</div><!--/container-->
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<strong><%= link_to 'New Product', new_product_path %></strong>
+
+
+
+
