--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -85,3 +85,13 @@ p {
 	font-size: 20px;
 	color: rgb(0, 0, 0);
 }
+
+#hero {
+    height: 90vh;
+}
+
+#hero-name {
+    padding-bottom: 100px;
+    font-size: 2em;
+    color: rgb(0,0,0)
+}
