--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,13 @@
       </div>
       <div class="collapse navbar-collapse navbar-menubuilder">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Home</a>
+          <li><%= link_to "Home", root_path %>
           </li>
-          <li><a href="/products">Products</a>
+          <li><%= link_to "Products", products_path %>
           </li>
-          <li><a href="/about-us">About Us</a>
+          <li><%= link_to "About Us", static_pages_about_path %>
           </li>
-          <li><a href="/contact">Contact Us</a>
+          <li><%= link_to "Contact Us", static_pages_contact_path %>
           </li>
         </ul>
       </div>
