--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -95,3 +95,13 @@ p {
     font-size: 2em;
     color: rgb(0,0,0)
 }
+
+// navbar links //
+li {
+    font-size: 1.5em;
+}
+
+/*.new-form {
+    width: 500px;
+}*/
+
