--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         </button>
       </div>
       <div class="collapse navbar-collapse navbar-menubuilder">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-left">
           <li><%= link_to "Home", root_path %>
           </li>
           <li><%= link_to "Products", products_path %>
@@ -32,6 +32,14 @@
           <li><%= link_to "Contact Us", static_pages_contact_path %>
           </li>
         </ul>
+        <div class="navbar-form navbar-right" role="search">
+          <div class="form-group">
+            <%= form_tag("/products", method: "get", html: {class: 'form-group', id: "search-form"}) do %>            
+            <%= text_field_tag :search, params[:q], class: "form-control" %>
+          </div>
+            <%= submit_tag "Search", :name => nil, class: "btn btn-default" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
