--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
+<div>
+	<%= link_to 'New Product', new_product_path %>
+</div>
 
 <div class="container-fluid">
-  <div class="row">
-    <%= render @products %>
-  </div><!--/row-->
+	<div class="row">
+		<%= render @products %>
+	</div><!--/row-->
 </div><!--/container-->
-
-<br>
-
-<strong><%= link_to 'New Product', new_product_path %></strong>
 
 
 
