--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="container">
+  <div class="row">
+    <!-- column for product's picture and comments on the bottom -->
+    <div class="col-xs-12 col-sm-6 col-md-8">
+      <div class="thumbnail">
+        <h2><%= @product.name %></h2>
+        <%= image_tag(@product.image_url, class:"product-img img-responsive")%>
+        <div class="caption">
+          <h3>Comments</h3>
+          <p><%= @product.highest_rating_comment.try(:body) %></p>
+          <p><%= @product.lowest_rating_comment.try(:body) %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+        </div>
+      </div>
+    </div>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
-
-<p>
-  <strong>Colour:</strong>
-  <%= @product.colour %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+    <!-- colomn for product's description, price, colour -->
+    <div class="col-xs-6 col-md-4">
+      <div class="caption">
+        <p><strong>Description:</strong> <%= @product.description %></p>
+        <p><strong>Colour:</strong> <%= @product.colour %></p>
+        <p><strong>Price:</strong> <%= @product.price %> $</p>
+        <p><strong>Rating:</strong> highest <%= @product.highest_rating_comment.try(:rating) %> / lowest <%= @product.lowest_rating_comment.try(:rating) %></p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
