--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -150,3 +150,17 @@ li {
 .form-links {
   text-decoration: underline;
 }
+
+.row .thumbnail {
+  border:0;
+  box-shadow:0;
+  border-radius:0;
+}
+
+.product_details {
+  padding-top: 80px;
+}
+
+.comments_text {
+  width: 400px;
+}
