--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,22 +7,18 @@
       <div class="thumbnail">
         <h2><%= @product.name %></h2>
         <%= image_tag(@product.image_url, class:"product-img img-responsive")%>
-        <div class="caption">
-          <h3>Comments</h3>
-          <p><%= @product.highest_rating_comment.try(:body) %></p>
-          <p><%= @product.lowest_rating_comment.try(:body) %></p>
-
-        </div>
+        <p><%= render partial: "new_comment" %></p>
+        <p><%= render partial: "comments" %></p>
       </div>
     </div>
 
     <!-- colomn for product's description, price, colour -->
     <div class="col-xs-6 col-md-4">
-      <div class="caption">
+      <div class="product_details">
         <p><strong>Description:</strong> <%= @product.description %></p>
         <p><strong>Colour:</strong> <%= @product.colour %></p>
         <p><strong>Price:</strong> <%= @product.price %> $</p>
-        <p><strong>Rating:</strong> highest <%= @product.highest_rating_comment.try(:rating) %> / lowest <%= @product.lowest_rating_comment.try(:rating) %></p>
+        <p class="rated" data-score="<%= @product.average_rating %>"><strong>Average Rating: </strong></p>
       </div>
     </div>
   </div>
