--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -3,7 +3,7 @@
   <div class="form-group">
     <h3>Add a review:</h3>
 
-    <%= form_for([@product, @product.comments.build]) do |f| %>
+    <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
       
       <div class="comments_text">
         <%= f.text_area :body, class: "form-control", placeholder: "Your comments"   %>
