--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,7 +20,7 @@
         <p><strong>Colour:</strong> <%= @product.colour %></p>
         <p><strong>Price:</strong> <%= @product.price %> $</p>
         <p><strong>Average Rating:</strong></p>
-        <p class="rated" data-score="<%= @product.average_rating %>"></p>
+        <p class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></p>
         <p>
           <%= form_tag "/payments/create" do %>
             <%= render partial: "shared/stripe_checkout_button" %>
