--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,9 @@
 
 <div class="container-fluid">
 	<div class="row">
+	<% cache(cache_key_for_products) do %>
 		<%= render @products %>
+	<% end %>
 	</div><!--/row-->
 </div><!--/container-->
 
