--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-  <div class="row">
+  <div class="row" data-product-id="<%= @product.id %>">
     <!-- column for product's picture and comments on the bottom -->
     <div class="col-xs-12 col-sm-6 col-md-8">
       <div class="thumbnail">
