--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -3,7 +3,7 @@
 	  <tbody>
 	  	<tr>
 	      <td bgcolor="#ed195a" style="padding: 40px 0 30px 0;" align="center">
-	      	<%= image_tag("contact.jpg") %>
+	      	<%= image_tag("https://s16.postimg.org/e4tf1cuhx/LOGO.jpg") %>
 	      </td>
 	    </tr>
 	    <tr>
