--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
           </li>
           <li><%= link_to "Products", products_path %>
           </li>
+          <li><%= link_to "Orders", orders_path %>
+          </li>
           <li><%= link_to "About Us", static_pages_about_path %>
           </li>
           <li><%= link_to "Contact Us", static_pages_contact_path %>
