--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-xs-center">
   <h1 class="display-3">Thank You!</h1>
-  <p class="lead"><strong>Your order has been placed.</strong> for further information please check your email.</p>
+  <p class="lead"><strong>Your order has been placed.</strong></p>
   <hr>
   <p>
     Having trouble? <%= link_to 'Contuct us', static_pages_contact_path %>
