--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,10 +4,10 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to MORISART! <%= @user.name %></h1>
+    <h1>Welcome to MORISART!</h1>
     <p>
-      You have successfully signed up to morisart.herokuapp.com,
-      your username is: <%= @user.login %>.<br/>
+      You have successfully signed up to morisart.herokuapp.com
+      <br/>
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
