--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,10 @@
-Welcome to MORISART! <%= @user.name %>
+Welcome to MORISART!
 ===============================================
  
-You have successfully signed up to morisart.herokuapp.com,
-your username is: <%= @user.login %>.
- 
+You have successfully signed up to morisart.herokuapp.com
+
+We creat unique pictures based on genuine beauty of human faces.
+
 To login to the site, just follow this link: <%= @url %>.
  
 Thanks for joining and have a great day!
